--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ waywall (0.5-1) unstable; urgency=medium
 
   * Initial release
 
- -- esensats <tesselslate>  Sat, 16 Aug 2025 12:14:00 +0200
+ -- ByPaco10 <tesselslate>
