--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,5 +1,7 @@
 waywall (0.5-1) unstable; urgency=medium
 
-  * Initial release
+  * Initial release.
+    - Upstream development by tessellate (@tesselslate).
+    - Debian packaging by ByPaco10.
 
- -- ByPaco10 <tesselslate>
+ -- ByPaco10 <example@example.com>  Wed, 16 Oct 2025 10:40:00 +0000
